kubernetes/nano/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graham-nano
  namespace: graham-nano
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: graham-nano
  template:
    metadata:
      labels:
        app: graham-nano
    spec:
      containers:
      - name: graham-nano
        image: replaceme
        ports:
        - containerPort: 11337
          name: api
        command: ["/bin/bash", "-c"]
        args: ["cp /config/config.yaml .; python bot.py start_bot -p ! -u http://pippin-nano.pippin:11338 -s \"/help\""]
        volumeMounts:
        - name: conf
          mountPath: /config
          readOnly: true
      volumes:
      - name: conf
        configMap:
          name: graham-nano
          defaultMode: 0755
