kubernetes/nano/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanobotapi-ingress
  namespace: graham-nano
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location = /callback {
        return 403;
      }
spec:
  tls:
    - hosts:
        - nanobotapi.banano.cc
      secretName: nanobotapi-banano-cc-server-secret
  rules:
    - host: nanobotapi.banano.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graham-nano
                port:
                  number: 11337
